# machine_learning

./: .gitignore  README.md  pyproject.toml
machine_learning/: config.py  linear_regression.py  logistic_regression.py  metrics.py
nbs/: classification_metrics.ipynb  linear_regression.ipynb  logistic_regression.ipynb
