[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = "Machine learning, from scratch."
authors = ["jme-taylor <jamiecharlestaylor94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
jupyterlab = "^3.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
